Fix responsiveness of hard board on mobile

--- a/src/components/elements/game/styles/boardCell.scss
+++ b/src/components/elements/game/styles/boardCell.scss
@@ -8,9 +8,9 @@ $breakpoint-large: '(min-width: 75em)' !default;
   border: 1px solid #fcfaf9;
   border-radius: 4px;
   float: left;
-  line-height: 20px;
-  height: 20px;
-  width: 20px;
+  line-height: 11px;
+  height: 11px;
+  width: 11px;
   text-align: center;
   cursor: pointer;
   color: #333333;
@@ -32,16 +32,16 @@ $breakpoint-large: '(min-width: 75em)' !default;
 
 @media #{$breakpoint-small} {
   .board-cell {
-    width: 35px;
-    height: 35px;
-    line-height: 35px;
+    width: 30px;
+    height: 30px;
+    line-height: 30px;
   }
 }
 @media #{$breakpoint-medium} {
   .board-cell {
-    width: 45px;
-    height: 45px;
-    line-height: 45px;
+    width: 38px;
+    height: 38px;
+    line-height: 38px;
   }
 }
 
